
[package]
authors = ["callerlibrary <96159769+callerlibrary@users.noreply.github.com>"]
edition = "2021"
name    = "meta_seal"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm     = "0.10.3"
base64      = "0.22.1"
chrono      = "0.4.44"
clap        = { version = "4.6.0", features = ["derive"] }
config      = "0.15.22"
dirs        = "6.0.0"
napi        = "3.0.0"
napi-derive = "3.0.0"
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
